Fix serious file read problem due to not-so-clear VOP_BMAP description. Should fix PR 45605.